3.5.2
 - build: add wheels for Python up to 3.11
 - docs: make docs build on Windows
 - docs: update GH actions badge
3.5.1
 - docs: minor update
3.5.0
 - feat: allow to specify geometric correction factor k during fit
   (tip position is multiplied by k and contact point is modified
   directly before and after fit)
3.4.0
 - feat: allow to load fitting models from external Python files
 - enh: add method to deregister NaniteFitModels
3.3.1
 - docs: added some clarifications in the model docs
 - enh: check for leading/trailing spaces in models
 - enh: add more checks during loading models
3.3.0
 - feat: introduce new NaniteFitModel class
 - ref: deprecated get_anc_parms in favor of compute_anc_parms
 - docs: add more information on how to write own model functions
3.2.1
 - enh: more sensible default parameters for POC estimation fits
3.2.0
 - feat: allow specifying the minimizer method for fitting (#21)
 - feat: new contact point estimation with linear fit for baseline
   and polynomial fit for indentation part
 - feat: new contact point estimation with Fréchet distance between
   curve and direct path in normalized coordinates
 - tests: rename experimental test data files according to
   afmformats scheme (#20)
3.1.4
 - docs: preprocessing methods not correctly rendered
3.1.3
 - fix: make sure that AFM metadata contain the spring constant and
   raise a MissingMetaDataError if this is not the case
 - ref: deprecate `IndentationPreprocessor` class in favor of a more
   flat submodule (#17)
3.1.2
 - docs: add POC table to docs
3.1.1
 - fix: do not modify preprocessing options when applying them (create
   a copy of the dictionary)
 - ref: remove `Indentation.reset` in favor of `AFMData.reset_data`
3.1.0
 - feat: new contact point estimation method "fit_constant_polynomial"
   which applies a piece-wise constant and polynomial fit
 - feat: contact point estimation methods now return detailed
   information about the procedure (currently plottable data to